k8s/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
        - name: client
          image: resamsel/translatr-loadgenerator:4.0.1-0
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              cpu: 1
            requests:
              cpu: 50m
