k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translatr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translatr
  template:
    metadata:
      labels:
        app: translatr
    spec:
      containers:
        - name: server
          image: resamsel/translatr:4.0.0-4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 100m
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 1200
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: translatr
  labels:
    app: translatr
spec:
  type: NodePort
  ports:
    - port: 9000
  selector:
    app: translatr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translatr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: translatr
                port:
                  number: 9000
